<resources>
    <string name="app_name">todolist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nova_tarefa" />
    <string name="salvar_Tarefa" />
    <string name="em_andamento_Tarefa" />
    <string name="data_Tarefa" />
    <string name="responsavel_Tarefa" />
    <string name="descricao_Tarefa" />
    <string name="nomeTarefa">Nome</string>
    <string name="descri_o">Descrição</string>
    <string name="respons_vel">Responsável</string>
    <string name="data">Data</string>
    <string name="em_andamento">Em andamento</string>
    <string name="salvar_tarefa">Salvar Tarefa</string>
</resources>